@@ -33,6 +33,7 @@ FEATURE: Core | Compact storage for "do not download" files [Parg]
 FEATURE: Core | Magnet URI protocol registration under windows [Parg]
 FEATURE: UI   | Beginner configuration user mode provides a simplified interface [Gouss]
 FEATURE: UI   | Support for --closedown parameter to org.gudy.azureus2.ui.swt.Main to closedown an existing AZ instance [Parg]
+FEATURE: Core | Support for .torrent file download using just infohash hex string (via DHT magnet lookup mechanism) [Nolar]
 
 CHANGE: Core  | Countermeasures against swarm DOS/poisoning [Nolar]
 CHANGE: Core  | Health status for swarms where all known peers are connected now reported as OK [Parg]
